chore: Update to Arquero v3.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arquero-worker",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Worker thread support for Arquero.",
   "keywords": [
     "data",
@@ -31,16 +31,15 @@
     "prepublishOnly": "yarn test && yarn lint && yarn build"
   },
   "dependencies": {
-    "arquero": "^2.1.1",
-    "arquero-arrow": "^0.1.0"
+    "arquero": "^3.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "eslint": "^7.17.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "eslint": "^7.20.0",
     "esm": "^3.2.25",
     "rimraf": "^3.0.2",
-    "rollup": "^2.36.1",
+    "rollup": "^2.39.0",
     "rollup-plugin-bundle-size": "1.0.3",
     "rollup-plugin-terser": "^7.0.2",
     "tape": "^5.1.1"
